--- a/ms-trade/src/main/resources/bootstrap.properties
+++ b/ms-trade/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=ms-user
+spring.application.name=ms-trade
 
 spring.cloud.config.uri=http://localhost:9001
 spring.cloud.config.fail-fast=false
