--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>ms-config</module>
 		<module>ms-eureka</module>
 		<module>ms-user</module>
+		<module>ms-trade</module>
 	</modules>
 
 </project>
