--- a/ms-eureka/src/main/resources/application.properties
+++ b/ms-eureka/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #eureka.server.enable-self-preservation=false
-eureka.server.wait-time-in-ms-when-sync-empty=0
+#eureka.server.wait-time-in-ms-when-sync-empty=0
 #eureka.server.eviction-interval-timer-in-ms=4000
