--- a/ms-user/src/main/resources/application.properties
+++ b/ms-user/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=9003
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=30000
