--- a/ms-user/src/main/resources/bootstrap.properties
+++ b/ms-user/src/main/resources/bootstrap.properties
@@ -3,4 +3,4 @@ spring.application.name=ms-user
 spring.cloud.config.uri=http://localhost:9001
 spring.cloud.config.fail-fast=false
 
-logging.path=D:\logs
+logging.path=D:\\logs
