--- a/ms-config/src/main/resources/application.properties
+++ b/ms-config/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=9001
 
 spring.cloud.config.server.git.force-pull=true
 spring.cloud.config.server.git.uri=https://github.com/wangfeishsh/ypp-config.git
-spring.cloud.config.server.git.name=baochunyu1987@163.com
-spring.cloud.config.server.git.password=a10051544
+spring.cloud.config.server.git.name=**
+spring.cloud.config.server.git.password=**
